[Visibility] Fix spelling of visible and invisible classes

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -236,8 +236,8 @@ Utility Classes
 .hidden, .hide                                              { display:none; }
 
 /***** Visibility *****/
-.invisable                                                  { display:none; visibility:hidden; }
-.visable                                                    { display:block; visibility:visible; }
+.invisible                                                  { display:none; visibility:hidden; }
+.visible                                                    { display:block; visibility:visible; }
 
 /***********************************************
 Disable Chrome blue border
